# Webots

./: SumoSupervisor.py  extract.py  proto_nodes.py  simple.wbt  t.proto
Webots-Lane-Detection/: .gitignore  demo.py  train.py
Webots-Lane-Detection/configs/: cfg_common.py  cfg_demo.py  cfg_train.py
Webots-Lane-Detection/data/: dataloader.py  dataset.py
Webots-Lane-Detection/model/: backbone.py  model.py
Webots-Lane-Detection/utils/: factory.py  metrics.py
ros2_ws/: nuke_ros.sh
ros2_ws/src/my_package/: package.xml  setup.py
ros2_ws/src/my_package/launch/: robot_launch.py  webots_launch.py
ros2_ws/src/my_package/my_package/: lane_follower.py  my_robot_driver.py
ros2_ws/src/my_package/resource/: my_robot.urdf
ros2_ws/src/my_package/worlds/: my_world.wbt
src/LIO-SAM/: .gitignore  CMakeLists.txt
src/LIO-SAM/config/: params.yaml  rviz2.rviz
src/create_dataset/: CMakeLists.txt  package.xml  robot_driver.xml  setup.py
src/create_dataset/create_dataset/: extract.py  lane_follower.py  lane_segmentation.py  my_robot_driver.py  robot_driver.py
src/create_dataset/include/create_dataset/: load_lanes.hpp  load_lanes_sumo.hpp  robot_driver.hpp
src/create_dataset/launch/: robot_launch.py  webots_launch.py
src/create_dataset/resource/: SUMO_VEHICLE1.urdf  lanes.txt  lanes_sumo.txt  my_robot.urdf  robot.urdf
src/create_dataset/resource/protos/: TeslaModel3Simple.proto
src/create_dataset/scripts/: export_lanes.py  lane_from_sumo.py  lane_segmentation.py  proto_nodes.py
src/create_dataset/src/: lane_follower.cpp  robot_driver.cpp
src/create_dataset/worlds/: .my_world.wbproj  city.wbt  my_world.wbt
src/create_dataset_python/: package.xml  setup.cfg  setup.py
src/create_dataset_python/create_dataset_python/: robot_driver.py
src/test_tesla/: package.xml  setup.cfg  setup.py
src/test_tesla/launch/: robot_launch.py  webots_launch.py
src/test_tesla/resource/: tesla_webots.urdf
src/test_tesla/test_tesla/: lane_follower.py  tesla_driver.py
src/test_tesla/worlds/: tesla_world.wbt
src/webots_launch/: package.xml  setup.cfg  setup.py
src/webots_launch/launch/: webots_launch.py
src/webots_launch/worlds/: city.wbt  sumo.wbt
src/webots_launch/worlds/city_net/: sumo.edg.xml  sumo.rou.xml
webots_windows/: SumoSupervisor.py  city.wbt
webots_windows/city_net/: sumo.net.xml  sumo.nod.xml  sumo.trip.xml
