<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create_dataset</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marvinlim4th@gmail.com">marvin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <webots_ros2_driver plugin="${prefix}/robot_driver.xml"/>
  </export>
</package>
